Inizio gestione registrazione utente

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -124,7 +124,7 @@
     <string name="other">Altro</string>
     <string name="otherDishesAvailable">(altri piatti sono disponibili)</string>
     <string name="parking">Parcheggio</string>
-    <string name="password">password</string>
+    <string name="password">Password</string>
     <string name="password_ripeat">Ripeti password:</string>
     <string name="pending">Pendenti</string>
     <string name="phone_number">Numero di telefono</string>
