--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -100,7 +100,7 @@
     <string name="noServices">Nessun servizio</string>
     <string name="no_email_client">Non è installato un client email su questo dispositivo</string>
     <string name="no_item_in_order">Seleziona almeno un piatto</string>
-    <string name="nome_registrazione">Nome:</string>
+    <string name="nome_registrazione">Nome</string>
     <string name="not_available">Non disponibile</string>
     <string name="notes">Note per il ristoratore:</string>
     <string name="notesOffer">Note</string>
@@ -125,7 +125,7 @@
     <string name="otherDishesAvailable">(altri piatti sono disponibili)</string>
     <string name="parking">Parcheggio</string>
     <string name="password">Password</string>
-    <string name="password_ripeat">Ripeti password:</string>
+    <string name="password_ripeat">Ripeti password</string>
     <string name="pending">Pendenti</string>
     <string name="phone_number">Numero di telefono</string>
     <string name="phone_number_with_col">• Numero di telefono:</string>
