--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -326,4 +326,5 @@
     <string name="notes_by_restaurant">Notes by the restaurant:</string>
 
     <string name="avvisoMappa">Finding your position...</string>
+    <string name="newNotification">NEW!</string>
 </resources>
