controllo connessione/timeout in tutte le varie schermate del client (salvo dimenticanze)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -182,6 +182,9 @@
     <string name="completa_registrazione">Personal informations are mandatory</string>
     <string name="connection_error">Connection Error</string>
 
+    <string name="review_published_failed">Saving review failed</string>
+    <string name="photo_send_error">Sending photo failed</string>
+    <string name="reservation_added_failed">Reservation request failed</string>
 
     <string name="seats_string">seats</string>
 
